--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,19 @@
 
 #list{
     display: block;
-    gap: 2em;
+}
+
+#date{
+    /* border: none; */
+    display: block;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 2em;
+}
+
+.delete{
+    margin-left: 2em;
+    margin-right: 2em;
 }
